--- a/style.css
+++ b/style.css
@@ -37,9 +37,7 @@ input[type="checkbox"] {
   margin: 0;
   padding: 15px;
 }
-.counter {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.button {
+  align-items: left;
   width: 100%;
 }
