--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@ input[type="checkbox"] {
   margin: 0;
   padding: 15px;
 }
-.button {
-  align-items: left;
-  width: 100%;
+.container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
 }
