--- a/style.css
+++ b/style.css
@@ -33,6 +33,15 @@ input[type="checkbox"] {
   right: 0;
   z-index: 100;
 }
+  .gb1 {
+  background-color: #;
+  height: 45px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
 .gb h1 {
   margin: 0;
   padding: 15px;
