--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ input[type="checkbox"] {
   z-index: 100;
 }
   .gb1 {
-  background-color: #;
+  background-color: #733F27;
   height: 45px;
   position: fixed;
   top: 0;
