--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ input[type="checkbox"] {
   left: 0;
   right: 0;
   z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
   .gb1 {
   background-color: #733F27;
